# P1_Project

./: CMakeLists.txt  README.md  cities.txt  city_information.txt  data_aarhus_distance.txt  data_aarhus_information.txt  data_nordjylland_distance.txt  data_nordjylland_information.txt  import_handler.c  import_handler.h  main.c  main.h  stress_dis.txt  stress_dis_4connections.txt  stress_info.txt  transport_types.txt
src/: CMakeLists.txt  dijkstra.c  dijkstra.h  distance_calculation.c  import_handler.c  import_handler.h  main.c  main.h  score_algorithm.c  score_algorithm.h  structs.h  user_input.c  user_input.h  utility.c  utility.h
test/: CMakeLists.txt  dijkstra_test.c  score_algorithm_test.c  user_input_test.c
